{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 272,
  "lineage": "d576ac2d-0bfa-4a30-a447-b17102945206",
  "resources": [
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-01T07:29:23.538-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alfred-rc1-a2df/global/firewalls/t-expressl7-ilb-fw-allow-iap-hc",
            "log_config": [],
            "name": "t-expressl7-ilb-fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-expressl7-ilb-network",
            "priority": 1000,
            "project": "alfred-rc1-a2df",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/firewalls/t-expressl7-ilb-fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-ilb-to-backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8081",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-01T07:29:23.512-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alfred-rc1-a2df/global/firewalls/t-expressl7-ilb-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "t-expressl7-ilb-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-expressl7-ilb-network",
            "priority": 1000,
            "project": "alfred-rc1-a2df",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/firewalls/t-expressl7-ilb-fw-allow-ilb-to-backends",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-04-01T07:33:05.885-07:00",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/forwardingRules/t-expressl7-ilb-forwarding-rule",
            "ip_address": "10.0.1.5",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "t-expressl7-ilb-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-expressl7-ilb-network",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "alfred-rc1-a2df",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/forwardingRules/t-expressl7-ilb-forwarding-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-expressl7-ilb-subnet",
            "target": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/targetHttpProxies/t-expressl7-ilb-target-http-proxy"
          },
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_backend_service.default",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_region_target_http_proxy.default",
            "module.base.google_compute_region_url_map.default",
            "module.base.google_compute_subnetwork.ilb_subnet",
            "module.base.google_compute_subnetwork.proxy_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240312",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/zones/us-central1-c/disks/t-expressl7-ilb-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/alfred-rc1-a2df/zones/us-central1-c/instances/t-expressl7-ilb-test-vm",
            "instance_id": "8573885324515047993",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "qZuD4I4G5wo=",
            "name": "t-expressl7-ilb-test-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-expressl7-ilb-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-expressl7-ilb-subnet",
                "subnetwork_project": "alfred-rc1-a2df"
              }
            ],
            "project": "alfred-rc1-a2df",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/zones/us-central1-c/instances/t-expressl7-ilb-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ilb_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/alfred-rc1-a2df/global/networks/t-expressl7-ilb-network",
            "mtu": 0,
            "name": "t-expressl7-ilb-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "841767950496528963",
            "project": "alfred-rc1-a2df",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-expressl7-ilb-network"
          }
        }
      ]
    },
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/instanceGroups/t-expressl7-ilb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-04-01T07:30:23.911-07:00",
            "enable_cdn": false,
            "fingerprint": "CLLTvmL1B2U=",
            "health_checks": [
              "projects/alfred-rc1-a2df/regions/us-central1/healthChecks/t-expressl7-ilb-hc"
            ],
            "id": "projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-expressl7-ilb-backend-subnet",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "t-expressl7-ilb-backend-subnet",
            "port_name": "http",
            "project": "alfred-rc1-a2df",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-expressl7-ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:32:39.640-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-expressl7-ilb-backend-subnet",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "8g7CUpbiXd8=",
            "host_rule": [],
            "id": "projects/alfred-rc1-a2df/regions/us-central1/urlMaps/t-expressl7-ilb-regional-url-map",
            "map_id": 296257484147358568,
            "name": "t-expressl7-ilb-regional-url-map",
            "path_matcher": [],
            "project": "alfred-rc1-a2df",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/urlMaps/t-expressl7-ilb-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_backend_service.default",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:29:23.877-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-expressl7-ilb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "t-expressl7-ilb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-expressl7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alfred-rc1-a2df",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-expressl7-ilb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:29:24.796-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-expressl7-ilb-proxy-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "t-expressl7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-expressl7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alfred-rc1-a2df",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-expressl7-ilb-proxy-subnet"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-01T07:29:23.437-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alfred-rc1-a2df/global/firewalls/t-mongodbl7-ilb-fw-allow-iap-hc",
            "log_config": [],
            "name": "t-mongodbl7-ilb-fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-mongodbl7-ilb-network",
            "priority": 1000,
            "project": "alfred-rc1-a2df",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/firewalls/t-mongodbl7-ilb-fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-ilb-to-backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8081",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-01T07:29:23.443-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alfred-rc1-a2df/global/firewalls/t-mongodbl7-ilb-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "t-mongodbl7-ilb-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-mongodbl7-ilb-network",
            "priority": 1000,
            "project": "alfred-rc1-a2df",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/firewalls/t-mongodbl7-ilb-fw-allow-ilb-to-backends",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-04-01T07:33:05.777-07:00",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/forwardingRules/t-mongodbl7-ilb-forwarding-rule",
            "ip_address": "10.0.1.5",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "t-mongodbl7-ilb-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-mongodbl7-ilb-network",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "alfred-rc1-a2df",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/forwardingRules/t-mongodbl7-ilb-forwarding-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-mongodbl7-ilb-subnet",
            "target": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/targetHttpProxies/t-mongodbl7-ilb-target-http-proxy"
          },
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_backend_service.default",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_region_target_http_proxy.default",
            "module.base.google_compute_region_url_map.default",
            "module.base.google_compute_subnetwork.ilb_subnet",
            "module.base.google_compute_subnetwork.proxy_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240312",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/zones/us-central1-c/disks/t-mongodbl7-ilb-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/alfred-rc1-a2df/zones/us-central1-c/instances/t-mongodbl7-ilb-test-vm",
            "instance_id": "1032101122730850872",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "qZuD4I4G5wo=",
            "name": "t-mongodbl7-ilb-test-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-mongodbl7-ilb-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-mongodbl7-ilb-subnet",
                "subnetwork_project": "alfred-rc1-a2df"
              }
            ],
            "project": "alfred-rc1-a2df",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/zones/us-central1-c/instances/t-mongodbl7-ilb-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ilb_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/alfred-rc1-a2df/global/networks/t-mongodbl7-ilb-network",
            "mtu": 0,
            "name": "t-mongodbl7-ilb-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4662373417371531843",
            "project": "alfred-rc1-a2df",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-mongodbl7-ilb-network"
          }
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/instanceGroups/t-mongodbl7-ilb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-04-01T07:30:24.024-07:00",
            "enable_cdn": false,
            "fingerprint": "JVUeQJmf1B4=",
            "health_checks": [
              "projects/alfred-rc1-a2df/regions/us-central1/healthChecks/t-mongodbl7-ilb-hc"
            ],
            "id": "projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-mongodbl7-ilb-backend-subnet",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "t-mongodbl7-ilb-backend-subnet",
            "port_name": "http",
            "project": "alfred-rc1-a2df",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-mongodbl7-ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:32:39.741-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-mongodbl7-ilb-backend-subnet",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "QXIllM9io8o=",
            "host_rule": [],
            "id": "projects/alfred-rc1-a2df/regions/us-central1/urlMaps/t-mongodbl7-ilb-regional-url-map",
            "map_id": 8555200889632553832,
            "name": "t-mongodbl7-ilb-regional-url-map",
            "path_matcher": [],
            "project": "alfred-rc1-a2df",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/urlMaps/t-mongodbl7-ilb-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_backend_service.default",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:29:24.506-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-mongodbl7-ilb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "t-mongodbl7-ilb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-mongodbl7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alfred-rc1-a2df",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-mongodbl7-ilb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[1]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:29:24.615-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-mongodbl7-ilb-proxy-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "t-mongodbl7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-mongodbl7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alfred-rc1-a2df",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-mongodbl7-ilb-proxy-subnet"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-01T07:29:35.988-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alfred-rc1-a2df/global/firewalls/t-prometheusl7-ilb-fw-allow-iap-hc",
            "log_config": [],
            "name": "t-prometheusl7-ilb-fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-prometheusl7-ilb-network",
            "priority": 1000,
            "project": "alfred-rc1-a2df",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/firewalls/t-prometheusl7-ilb-fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-ilb-to-backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8081",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-01T07:29:35.859-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alfred-rc1-a2df/global/firewalls/t-prometheusl7-ilb-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "t-prometheusl7-ilb-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-prometheusl7-ilb-network",
            "priority": 1000,
            "project": "alfred-rc1-a2df",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/firewalls/t-prometheusl7-ilb-fw-allow-ilb-to-backends",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-04-01T07:33:06.999-07:00",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/forwardingRules/t-prometheusl7-ilb-forwarding-rule",
            "ip_address": "10.0.1.5",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "t-prometheusl7-ilb-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-prometheusl7-ilb-network",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "alfred-rc1-a2df",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/forwardingRules/t-prometheusl7-ilb-forwarding-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-prometheusl7-ilb-subnet",
            "target": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/targetHttpProxies/t-prometheusl7-ilb-target-http-proxy"
          },
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_backend_service.default",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_region_target_http_proxy.default",
            "module.base.google_compute_region_url_map.default",
            "module.base.google_compute_subnetwork.ilb_subnet",
            "module.base.google_compute_subnetwork.proxy_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240312",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/zones/us-central1-c/disks/t-prometheusl7-ilb-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/alfred-rc1-a2df/zones/us-central1-c/instances/t-prometheusl7-ilb-test-vm",
            "instance_id": "237956824977340984",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "qZuD4I4G5wo=",
            "name": "t-prometheusl7-ilb-test-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-prometheusl7-ilb-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-prometheusl7-ilb-subnet",
                "subnetwork_project": "alfred-rc1-a2df"
              }
            ],
            "project": "alfred-rc1-a2df",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/zones/us-central1-c/instances/t-prometheusl7-ilb-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ilb_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/alfred-rc1-a2df/global/networks/t-prometheusl7-ilb-network",
            "mtu": 0,
            "name": "t-prometheusl7-ilb-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8977701864831679043",
            "project": "alfred-rc1-a2df",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-prometheusl7-ilb-network"
          }
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/instanceGroups/t-prometheusl7-ilb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-04-01T07:30:22.929-07:00",
            "enable_cdn": false,
            "fingerprint": "ZL5tdeDa2Tk=",
            "health_checks": [
              "projects/alfred-rc1-a2df/regions/us-central1/healthChecks/t-prometheusl7-ilb-hc"
            ],
            "id": "projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-prometheusl7-ilb-backend-subnet",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "t-prometheusl7-ilb-backend-subnet",
            "port_name": "http",
            "project": "alfred-rc1-a2df",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-prometheusl7-ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:32:39.619-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/backendServices/t-prometheusl7-ilb-backend-subnet",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "LYYkU06Jxa4=",
            "host_rule": [],
            "id": "projects/alfred-rc1-a2df/regions/us-central1/urlMaps/t-prometheusl7-ilb-regional-url-map",
            "map_id": 5484803704016567144,
            "name": "t-prometheusl7-ilb-regional-url-map",
            "path_matcher": [],
            "project": "alfred-rc1-a2df",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/urlMaps/t-prometheusl7-ilb-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.google_compute_instance_template.instance_template",
            "module.base.google_compute_network.ilb_network",
            "module.base.google_compute_region_backend_service.default",
            "module.base.google_compute_region_health_check.default",
            "module.base.google_compute_region_instance_group_manager.mig",
            "module.base.google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:29:23.802-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-prometheusl7-ilb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "t-prometheusl7-ilb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-prometheusl7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alfred-rc1-a2df",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-prometheusl7-ilb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "module": "module.base[2]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].google101",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-01T07:29:24.627-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-prometheusl7-ilb-proxy-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "t-prometheusl7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/global/networks/t-prometheusl7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alfred-rc1-a2df",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alfred-rc1-a2df/regions/us-central1/subnetworks/t-prometheusl7-ilb-proxy-subnet"
          },
          "dependencies": [
            "module.base.google_compute_network.ilb_network"
          ]
        }
      ]
    }
  ]
}